sumo/tests/traci/StopNode/InvalidNode/net_state.traci
<?xml version="1.0"?>

<!-- generated on 03/19/10 08:39:22 by SUMO sumo Version dev-SVN-r8460
<configuration>

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="routes.rou.xml"/>
    </input>

    <output>
        <netstate-dump value="netstate_dump.xml"/>
    </output>

    <report>
        <no-step-log value="true"/>
    </report>

    <traci_server>
        <remote-port value="8824"/>
        <penetration value="1"/>
    </traci_server>

</configuration>
-->

<sumo-netstate>
    <timestep time="0.00">
        <edge id="1fi">
            <lane id="1fi_0">
                <vehicle id="veh0" pos="0.00" speed="0.00"/>
            </lane>
            <lane id="1fi_1"/>
        </edge>
    </timestep>
    <timestep time="1.00">
        <edge id="1fi">
            <lane id="1fi_0">
                <vehicle id="veh0" pos="0.80" speed="0.80"/>
            </lane>
            <lane id="1fi_1"/>
        </edge>
    </timestep>
    <timestep time="2.00">
        <edge id="1fi">
            <lane id="1fi_0">
                <vehicle id="veh0" pos="2.34" speed="1.54"/>
            </lane>
            <lane id="1fi_1"/>
        </edge>
    </timestep>
</sumo-netstate>
